2017-06-05  Volker Reichelt  <v.reichelt@netcologne.de>

	* parser.c (cp_parser_base_specifier): Fix typos in error messages.

2017-06-02  Nathan Sidwell  <nathan@acm.org>

	Remove lang_type_ptrmem.
	* cp-tree.h (lang_type_header): Remove is_lang_type_class. Move
	into ...
	(lang_type_class): ... this.  Reorder bitfields.  Rename to ...
	(lang_type): ... this.  Delete old definition.
	(lang_type_ptrmem): Delete.
	(LANG_TYPE_CLASS_CHECK): Simply get TYPE_LANG_SPECIFIC.  Adjust uses.
	(LANG_TYPE_PTRMEM_CHECK): Delete.
	(TYPE_GET_PTRMEMFUNC_TYPE, TYPE_SET_PTRMEMFUNC_TYPE): Delete.
	(TYPE_PTRMEMFUNC_TYPE): New.  Use TYPE_LANG_SLOT_1.
	* decl.c (build_ptrmemfunc_type): Adjust.
	* lex.c (copy_lang_type): Remove lang_type_ptrmem handling.
	(maybe_add_lang_type_raw): Don't set u.c.h.is_lang_type_class.
	
	* class.c (check_bases_and_members): Adjust vec_new_uses_cookie
	setting.
	
	Remove cp_binding_level::namespaces
	* name-lookup.h (cp_binding_level): Lose namespaces field.
	* name-lookup.c (add_decl_to_level): Chain namespaces on the names
	list.
	(suggest_alternatives_for): Adjust for namespace list.  Do
	breadth-first search.
	* decl2.c (collect_source_refs): Namespaces are on the regulr
	list.
	(collect_ada_namespace): Likewise.

2017-06-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* typeck.c (cp_build_binary_op): Implement the -Wsizeof_pointer_div
	warning.

2017-06-01  Ville Voutilainen  <ville.voutilainen@gmail.com>

	PR c++/80812
	* method.c (constructible_expr): Strip array types before calling
	build_value_init.

2017-06-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/80896
	* cvt.c (convert_to_void): Possibly call maybe_warn_nodiscard
	for case INDIRECT_REF too in the main switch.

2017-05-31  Jason Merrill  <jason@redhat.com>

	PR c++/80840 - ICE with constexpr and reference
	* pt.c (convert_nontype_argument): Don't test whether a decl is
	value-dependent when binding to a reference.

2017-05-31  Nathan Sidwell  <nathan@acm.org>
