@@ -1,3 +1,8 @@
+2017-06-06  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/80979
+	* name-lookup.c (adl_class_only): Don't add visible friends.
+
 2017-06-05  Volker Reichelt  <v.reichelt@netcologne.de>
 
 	* parser.c (cp_parser_base_specifier): Fix typos in error messages.
